[package]
name = "rlox"
version = "0.1.0"
authors = ["Chris Roche <cargo@rodaine.com>"]
description = "Rust implementation of the Lox language virtual machine"
repository = "https://github.com/rodaine/rlox"
readme = "README.md"
keywords = ["lox", "interpreter", "pl", "compiler", "virtual machine"]
categories = ["parsing", "parser-implementations"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "rodaine/rlox" }

[dependencies]
lazy_static = "1.0.0"
byteorder = "1"

[features]
debug-destructors = []
debug-constructors = []
debug-define = []
debug-assign = []
debug-timings = []
debug-instructions = []
debug = [
  "debug-destructors",
  "debug-constructors",
  "debug-define",
  "debug-assign",
  "debug-timings",
  "debug-instructions",
]

[[bin]]
name = "rlox"
doc = false
